Ajout de l'icone

--- a/assets/style.css
+++ b/assets/style.css
@@ -537,7 +537,8 @@ header {
 
 .arrow {
   display: block;
-  animation: arrow 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  -webkit-animation: arrow 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+          animation: arrow 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
 .logo_all {
@@ -589,17 +590,24 @@ header {
   color: white;
 }
 
-@keyframes arrow {
+@-webkit-keyframes arrow {
   0% {
-    -webkit-transform: translateY(0);
     transform: translateY(0);
     opacity: 0;
   }
   100% {
-    -webkit-transform: translateY(10vw);
     transform: translateY(10vw);
     opacity: 1;
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+@keyframes arrow {
+  0% {
+    transform: translateY(0);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(10vw);
+    opacity: 1;
+  }
+}/*# sourceMappingURL=style.css.map */
